wp-content/themes/my-portfolio-tw/style.css
/*
Theme Name: My Portfolio Theme Child
Theme URI: http://thomaswilson.me
Description: My Portfolio Theme Child
Author: Thomas Wilson
Author URI: http://thomaswilson.me
Template: my-portfolio
Version: 1.0
Text Domain: My Portfolio
*/

/* header */

#nav {
    background-color: rgba(15, 110, 250, 0.8);
    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.8);
    border-bottom: #003cb3;
    
}

#nav h1 {
    font-size: 2em;
    color: #fff;
    font-family: 'Helvetica', sans-serif;
    text-shadow: none;
}

#nav h2 {
    font-size: 1.5em;
    color: #fff;
    font-family: 'garamound', serif;
}

nav a {
    font-family: 'Helvetica', sans-serif;
    font-size: 1.25em;
    color: #fff;
}

.navbar-default .navbar-nav>li>a {
    color: #fff;
}

.navbar-default:hover .navbar-nav>li>a:hover {
    color: #fff;
}

/*body*/
body {
    margin-top: 100px;
    color: #555;
    font-family: 'garamound', serif; /* 1 */
    background-color: #f2f2f4;
}

.card {
    background-color: #fff;
    margin: 5px;
    padding: 10px;
    border: solid thin #eee;
    border-radius: 5px;
}

ul.wptreehouse-badges {
    border: 1px solid #e8e8e8;
    border-color: #e8e8e8;
    margin-bottom: 10px;
    background-color: #fff;
    border-radius: 5px;
}

.album img {
    box-shadow: none;
}

.flexslider {
    border-radius: 5px;
    box-shadow: none;
}

.flex-control-nav {
    visibility: visible;
}

